# university-management-system

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_PROGRESS.md  PROJECT_SUMMARY.md  Project_SRS.md  Project_Structure.md  Project_Structure.txt  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_baseline.py  0002_core_reference_data.py  0003_user.py  0004_role_profiles.py  0005_scheduling.py  0006_attendance.py  0007_exams.py  0008_results.py  0009_fees.py  0010_notifications.py
backend/app/: main.py
backend/app/core/: config.py  file_response.py  logging_config.py  security.py
backend/app/csv/: attendance_report.py
backend/app/db/: base.py  session.py
backend/app/excel/: attendance_report.py  fees_report.py  results_report.py  shared.py
backend/app/middleware/: auth.py  error_handlers.py  logging.py  rate_limit.py  rbac.py
backend/app/models/: __init__.py  admin.py  answer.py  attendance_record.py  class_session.py  course.py  department.py  enrollment.py  exam.py  exam_submission.py  fee_structure.py  invoice.py  notification.py  parent.py  parent_student_link.py  payment.py  question.py  question_grade.py  question_option.py  result.py  room.py  schedule_change_request.py  schedule_entry.py  semester.py  student.py  teacher.py  user.py
backend/app/notifications/: dispatcher.py
backend/app/pdf/: attendance_report.py  fees_report.py  results_report.py  (+3 more)
backend/scripts/: seed_admin.py  seed_demo_data.py
backend/tests/: conftest.py
(+225 files in other folders)
